styles/globals.css
html,
body {
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}

a {
  color: white;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

.App {
  font-family: sans-serif;
  text-align: center;
}

body {
  margin: 0;
  padding: 0;
  background: black;
  overflow-y: scroll;
  --secondary: rgb(161, 161, 161);
  --divider: #343434;
}
.menu-swipe .MuiDrawer-paper {
  width: 300px;
  background-color: #000 !important;
}
.model-swipe .MuiDrawer-paper {
  width: 100%;
  height: 97vh;
  background-color: #000 !important;
}
.sketchfab-embed-wrapper,
.sk-frame-wrapper,
.sk-frame-wrapper iframe {
  width: 100%;
  height: 100%;
  padding-top: 10px;
}
.loader {
  position: absolute;
  height: 100%;
  width: 100%;
  align-items: center;
  display: flex;
  justify-content: center;
  z-index: -1;
}
.loader svg{height: 140px;width: 140px;}
.open-model-btn {
  background-color: #008069 !important;
  color: white !important;

}
.root {
  display: flex;
  padding: 5px;
  justify-content: center;
}
#card-list-container,
.post-container {
  max-width: 990px;
  flex: 1 1 100%;
}
.post-content-description{
  margin-bottom: 40px;
  margin-top: 10px;
}
.PrivateSwipeArea-root {
  width: unset !important;
}
.close-menu {
  cursor: pointer;
  position: absolute;
  color: #fff;
  right: 5px;
  top: 5px;
  font-weight: 800;
}
.close-map {
  cursor: pointer;
  position: absolute;
  color: #fff;
  left: 5px;
  top: 5px;
  font-weight: 800;
}
.sidebar {
  display: none;
}
.infoTab {
  overflow-y: scroll;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.avatar-container .MuiAvatar-root {
  height: 220px;
  width: 220px;
}

.header {
  padding: 5px;
  display: flex;
  width: 100%;
  height: 40px;
  align-items: center;
  position: fixed;
  z-index: 1;
  justify-content: center;
}

.header .logo img {
  width: 100%;
  display: block;
  margin-left: auto;
  margin-right: auto;
}
.header .menu {
  margin-left: auto;
}
.header .map {
  margin-left: auto;
  margin-right: 5px;
}

.overflow-hidden {
  position: fixed;
}

* {
  box-sizing: border-box;
  font-family: ".SFNSText", "SFProText-Regular", "SFUIText-Regular", ".SFUIText",
    Helvetica, Arial, sans-serif;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

#root {
  display: flex;
  justify-content: center;
}

.screen {
  width: 100%;
  height: 100%;
}

.container {
  max-width: 990px;
  flex: 1 1 100%;
  padding: 45px 25px;
}

h1 {
  font-weight: bold;
  color: white;
  margin: 6px 0 12px;
}

.date {
  color: var(--secondary);
  font-size: 14px;
  text-transform: uppercase;
}

.avatar {
  background: var(--divider);
  border-radius: 50%;
  position: absolute;
  bottom: 12px;
  right: 0;
  /* overflow: hidden; */
}

.avatar,
.avatar img {
  width: 40px;
  height: 40px;
}

ul,
li {
  list-style: none;
  padding: 0;
  margin: 0;
}
.hero-post {
  padding-top: 45px;
  height: 240px;
}
.post-content-container {
  margin-top: 40px;
}
.post-content {
  border-bottom-left-radius: 0% !important;
  border-bottom-right-radius: 0% !important;
}
#card-list-container {
  padding-top: 45px;
}
.card-list {
  display: flex;
  flex-wrap: wrap;
  align-content: flex-start;
}

.card {
  position: relative;
  padding: 25px;
  height: 460px;
  flex: 0 0 40%;
  max-width: 40%;
}

.card:nth-child(4n + 1),
.card:nth-child(4n + 4) {
  flex: 0 0 60%;
  max-width: 60%;
}

.card:nth-child(odd) {
  padding-left: 0;
}

.card:nth-child(even) {
  padding-right: 0;
}

.card-content-container {
  width: 100%;
  height: 100%;
  position: relative;
  display: block;
}

.card-content-container.open {
  top: 0;
  left: 0;
  right: 0;
  position: absolute;
  z-index: 11;
  overflow-y: scroll;
  padding: 40px 0;
}

.card-content {
  pointer-events: auto;
  position: relative;
  border-radius: 20px;
  background: #1c1c1e;
  overflow: hidden;
  width: 100%;
  height: 100%;
  margin: 0 auto;
}

.open .card-content {
  height: auto;
  max-width: 700px;
  /* overflow: hidden; */
}

.card-open-link {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.card-image-container {
  /* position: absolute;
  top: 0;
  left: 0;
  overflow: hidden;*/
  height: 100%;
  width: 100%;
}

.card-image {
  height: 100%;
  width: 100%;
  object-fit: cover;
}
.img-overlay {
  position: absolute;
  height: 100%;
  width: 100%;
  background: rgb(0, 0, 0, 0.3);
}

.open .card-image-container,
.open .title-container {
  z-index: 1;
}

.title-container {
  position: absolute;
  top: 15px;
  left: 15px;
  max-width: 300px;
}

.open .title-container {
  top: 30px;
  left: 30px;
}

h2 {
  color: #fff;
  margin: 8px 0;
}

.category {
  color: #fff;
  font-size: 14px;
  text-transform: uppercase;
}

.overlay {
  z-index: 1;
  position: fixed;
  background: rgba(0, 0, 0, 0.8);
  will-change: opacity;
  top: 0;
  bottom: 0;
  left: 50%;
  transform: translateX(-50%);
  width: 100%;
  max-width: 990px;
}

.overlay a {
  display: block;
  position: fixed;
  top: 0;
  bottom: 0;
  width: 100vw;
  left: 50%;

  transform: translateX(-50%);
}

.content-container {
  padding: 460px 35px 35px 35px;
  max-width: 700px;
  width: 90vw;
}

p {
  color: #9d9ca1;
  font-size: 20px;
  line-height: 28px;
}
.video {
  width: 100%;
  height: 100%;
}
.video_player {
  height: 100% !important;
  width: 100% !important;
}
.video_player video {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

@media only screen and (min-width: 1200px) {
  .model-swipe,
  .model-swipe .MuiBackdrop-root {
    left: 300px;
  }

  .model-swipe .MuiDrawer-paper {
    width: calc(100% - 300px);
    height: 97vh;
    background-color: #000 !important;
    margin-left: auto;
  }
  .hero-post {
    height: 480px;
    padding-top: 20px;
  }
  #card-list-container {
    padding-top: 0px;
  }
  .sidebar {
    flex-direction: column;
    padding: 10px;
    padding-top: 25px;
    z-index: 1;
    background-color: black;
    position: fixed;
    width: 360px;
    height: 100vh;
    display: flex;
    align-items: center;
  }
  .root {
    margin-left: 300px;
  }
  .header .menu {
    display: none;
  }
  .header {
    justify-content: start;
  }
}
@media only screen and (max-width: 800px) {
  .card {
    flex: 0 0 50%;
    max-width: 50%;
  }

  .card:nth-child(4n + 1),
  .card:nth-child(4n + 4) {
    flex: 0 0 50%;
    max-width: 50%;
  }
  /* .video_player{
    height: unset !important;
    width: 115% !important;
  } */
}

@media only screen and (max-width: 600px) {
  .MuiDrawer-paper {
    width: 100vw;
  }
  .header .logo img {
    width: 70%;
  }

  /* .video_player{
    height: unset !important;
    width: 600px !important;
  } */
  .card {
    flex: 1 0 100%;
    max-width: 100%;
    padding: 10px;
    padding-left: 0;
    padding-right: 0;
  }

  .card:nth-child(4n + 1),
  .card:nth-child(4n + 4) {
    flex: 1 0 100%;
    max-width: 100%;
  }

  .card-content-container.open {
    padding: 0;
  }
}

